--- a/css/style-child-immunity.css
+++ b/css/style-child-immunity.css
@@ -19,17 +19,26 @@ header {
 }
 
 .uk-banner-vitiligo {
-/*    background: linear-gradient(90deg, #f2c292 0%, #f2c292 35%, #fbd4a9 100%);*/
-   /*background: url(../images/banner-right-top.webp) top right no-repeat;
-    background-size: auto !important;
-    background-color: linear-gradient(90deg, #f2c292 0%, #f2c292 35%, #fbd4a9 100%);*/
-/*      height: 100vh;*/
     background-position: top right, bottom left;
     background-repeat: no-repeat;
     background-image: url(../images/banner-right-top.webp),
     url(../images/banner-left-bottom.webp);
     background-size: auto !important;
 }
+
+
+@media (max-width: 768px){
+    .uk-banner-vitiligo {
+    background-position: top right, bottom left;
+    background-repeat: no-repeat;
+    background-image: url(../images/banner-right-top-mob.webp),
+    url(../images/banner-left-bottom-mob.webp);
+    background-size: auto !important;
+}
+
+}
+
+
 
 .banner_cus_bg {
     background: linear-gradient(90deg, #f2c292 0%, #f2c292 35%, #fbd4a9 100%) !important;
@@ -348,6 +357,10 @@ header {
     }
 */
 
+    .contactFormHolder {
+      background-color: #47190e;
+    }
+
     .formLogo {
         display: none;
     }
@@ -382,7 +395,8 @@ header {
 }
 
 .contactForm {
-    padding: 15px !important;
+    padding: 20px !important;
+    background-color: #fff;
 }
 
 @media only screen and (max-width: 480px) {
@@ -398,8 +412,8 @@ header {
     }
 
     .contactForm {
-        padding: 15px !important;
-        margin-top: -55px;
+        padding: 20px !important;
+/*        margin-top: -55px;*/
     }
 }
 
@@ -789,7 +803,7 @@ del {
 .all-main-para {
     font-size: 16px;
     color: #757575;
-    text-align: justify;
+    text-align: left;
 }
 
 .icon-para-cs {
@@ -952,7 +966,7 @@ del {
 
 @media (max-width: 575px){
     .our-doc-advantages-bg {
-    background: url(../images/our-doc-bg-mob.webp) bottom center no-repeat;
+    background: url(../images/our-doc-bg-mob.png) bottom center no-repeat;
     background-size: cover;
 }
 }
