--- a/css/style.css
+++ b/css/style.css
@@ -26,19 +26,15 @@ header {
     background-size: auto !important;
 }
 
-
-@media (max-width: 768px){
+@media (max-width: 768px) {
     .uk-banner-vitiligo {
-    background-position: top right, bottom left;
-    background-repeat: no-repeat;
-    background-image: url(../images/banner-right-top-mob.webp),
+        background-position: top right, bottom left;
+        background-repeat: no-repeat;
+        background-image: url(../images/banner-right-top-mob.webp),
     url(../images/banner-left-bottom-mob.webp);
-    background-size: auto !important;
+        background-size: auto !important;
+    }
 }
-
-}
-
-
 
 .banner_cus_bg {
     background: linear-gradient(90deg, #f2c292 0%, #f2c292 35%, #fbd4a9 100%) !important;
@@ -160,7 +156,8 @@ header {
     .banner_area {
 /*        background: #eae8e9;*/
         margin-top: 60px;
-/*        background-size: cover;*/;
+/*        background-size: cover;*/
+        ;
     }
 
     .form_widget_area {
@@ -187,7 +184,8 @@ header {
     .banner_area {
         height: auto;
 /*        background: #f2f2f2;*/
-/*        background-repeat: repeat;*/;
+/*        background-repeat: repeat;*/
+        ;
     }
 
     .banner_text h1, .banner_h2, .head_text {
@@ -250,11 +248,10 @@ header {
     box-shadow: none;
     border-color: #a6a8ab;
     border-radius: 15px;
-    font-family: inherit;
     height: 35px;
     font-size: 0.875em;
-    font-family: inherit;
-/*    padding: 5px 10px;*/;
+/*    padding: 5px 10px;*/
+    ;
 }
 
 .contactForm .form-control:focus {
@@ -290,7 +287,6 @@ header {
 .btn-primary {
     outline: none;
     border: none;
-    font-family: 'freesansbold';
     font-weight: normal;
     text-transform: uppercase;
     font-size: 1em;
@@ -329,7 +325,8 @@ header {
         width: 100%;
         z-index: 3;
         padding: 30px 30px 30px 30px;
-/*        background-color: #eae9e7;*/;
+/*        background-color: #eae9e7;*/
+        ;
     }
 
     .contactForm {
@@ -358,7 +355,7 @@ header {
 */
 
     .contactFormHolder {
-      background-color: #47190e;
+        background-color: #47190e;
     }
 
     .formLogo {
@@ -413,7 +410,7 @@ header {
 
     .contactForm {
         padding: 20px !important;
-/*        margin-top: -55px;*/
+/*        margin-top: -55px;*/;
     }
 }
 
@@ -458,7 +455,8 @@ header {
 }
 
 .contactForm .row {
-/*    margin: 0 !important;*/;
+/*    margin: 0 !important;*/
+    ;
 }
 
 .form-group label {
@@ -527,7 +525,6 @@ nav img {
     margin-bottom: 0;
     text-decoration: none !important;
     display: block;
-    font-family: 'Proxima Nova Rg';
     background: #fff;
     border: 1px solid #e6e7e8;
     position: relative;
@@ -542,7 +539,6 @@ nav img {
 
 .btn_card h3 {
     font-size: 19px;
-    font-family: 'Proxima Nova Rg';
 }
 
 .btn_card b {
@@ -752,23 +748,24 @@ del {
 @media screen and (max-width: 1400px) and (min-width: 768px) {
 
     .banner_para {
-    padding-top: 5px;
-    font-size: 18px;
-    line-height: 24px;
-    color: #212121;
-    font-weight: 400;
-}
+        padding-top: 5px;
+        font-size: 18px;
+        line-height: 24px;
+        color: #212121;
+        font-weight: 400;
+    }
 
-.banner_ornge_heding {
-    padding: 5px 12px;
-    font-size: 27px;
-    line-height: 49px;
-    font-weight: 600;
-    text-transform: uppercase;
-    color: #fff;
-    background-color: #ba7c50;
-    display: inline;
-}
+    .banner_ornge_heding {
+        padding: 5px 12px;
+        font-size: 27px;
+        line-height: 49px;
+        font-weight: 600;
+        text-transform: uppercase;
+        color: #fff;
+        background-color: #ba7c50;
+        display: inline;
+    }
+
     .test_vitiligo_btn {
         text-transform: uppercase;
         background: #491a0e !important;
@@ -779,7 +776,6 @@ del {
         box-shadow: 0 1px 9px 0 rgb(129 105 67);
     }
 }
-
 
 @media (max-width: 600px) {
     .test_vitiligo_btn {
@@ -797,7 +793,7 @@ del {
     background: #491a0e;
 /*    margin-top: -30px;*/
 /*    position: relative;*/
-/*    z-index: 2;*/
+/*    z-index: 2;*/;
 }
 
 .icon-band p {
@@ -856,10 +852,11 @@ del {
 }
 
 .section-padding {
-/*  margin: 0 auto;*/;
+/*  margin: 0 auto;*/
+    ;
 }
 
-.owl-carousel{
+.owl-carousel {
     z-index: 0;
 }
 
@@ -935,24 +932,21 @@ del {
     margin-top: -55px;
 }
 
-
-@media (max-width: 1024px){
+@media (max-width: 1024px) {
     .what-section-css {
-    margin-top: 10px;
-    margin-bottom: 70px;
-    background-color: #fff2e2;
-    height: auto;
-}
+        margin-top: 10px;
+        margin-bottom: 70px;
+        background-color: #fff2e2;
+        height: auto;
+    }
 
-.what-box-css {
-    padding: 40px;
-    background-color: #491a0e;
-    margin-top: 0;
-    margin-bottom: -60px;
+    .what-box-css {
+        padding: 40px;
+        background-color: #491a0e;
+        margin-top: 0;
+        margin-bottom: -60px;
+    }
 }
-
-}
-
 
 .award-heading {
     font-size: 12px;
@@ -978,7 +972,7 @@ del {
     color: #757575;
     font-weight: 500;
     line-height: 19px;
-    height:30px;
+    height: 30px;
 }
 
 .our-doctor-heading {
@@ -999,12 +993,11 @@ del {
     background-size: cover;
 }
 
-
-@media (max-width: 575px){
+@media (max-width: 575px) {
     .our-doc-advantages-bg {
-    background: url(../images/our-doc-bg-mob.webp) bottom center no-repeat;
-    background-size: cover;
-}
+        background: url(../images/our-doc-bg-mob.webp) bottom center no-repeat;
+        background-size: cover;
+    }
 }
 
 .our-doc-list li {
@@ -1075,8 +1068,8 @@ del {
     padding-top: 20px;
 }
 
-hr.why-hr-line{
-  border: 1px solid #e3cbb9;
+hr.why-hr-line {
+    border: 1px solid #e3cbb9;
 }
 
 
